public class DedicatedTransport extends AbUnit{
    DedicatedTransport(String unitName, String type, int minimumUnitSize, int maximumUnitSize, int modelCost) {
        super(unitName, type, minimumUnitSize, maximumUnitSize, modelCost);
    }
}
