import java.util.ArrayList;
import java.util.Random;

public interface Detachment {

/*
    ArrayList<detachmentType> batallion = new ArrayList<detachmentType>();



    if(pointsPicked > 1000 && !pointsPicked > 2000){
        detachmentType = batallion;

        batallion.add(Random(HQ));
        batallion.add(Random(Troops));

        HQ.unitCost();
        Troops.unitCost();
    }
*/
}
