public class Flyer extends AbUnit{
    Flyer(String unitName, String type, int minimumUnitSize, int maximumUnitSize, int modelCost) {
        super(unitName, type, minimumUnitSize, maximumUnitSize, modelCost);
    }
}
