public interface TextUI {
}
