public interface Unit {

    String getUnitName();
    String getType();
    int getMinimumUnitSize();
    int getMaximumUnitSize();
    int getModelPrice();
    int getTotalUnitCost();




}
