package UnitType;

public interface Elites {
}
