package UnitType;

public interface FastAttacks {
}
