package UnitType;

public interface HeavySupport {
}
