package UnitType;

public interface Troops {
}
